--- a/css/site.css
+++ b/css/site.css
@@ -41,7 +41,7 @@ header > nav
 }
 
 .menu-item:hover {
-    color: blue;
+    color: rgb(51, 255, 0);
     font: 20px;
     transition: .5s;
 }
@@ -83,7 +83,7 @@ footer {
     background-image: linear-gradient(to right, rgba(81, 79, 76, 0.168), rgb(1, 1, 1) ), url('../images/fondos/fondo_barra-fondoneg.jpeg');
 
     width: 100%;
-    height: 150px;
+    height: 120px;
     
     display: flex;
     flex-direction: row;
