--- a/css/site.css
+++ b/css/site.css
@@ -40,12 +40,13 @@ header > nav
     align-items: center;
 }
 
+
+
 .menu-item:hover {
     color: rgb(51, 255, 0);
     font: 20px;
     transition: .5s;
 }
-
 
 .menu-item {
     font-size: 20px;
@@ -62,6 +63,29 @@ header > nav
 
 .nav-item:hover {
     background-color: rgb(53, 58, 64);
+}
+
+@media (max-width: 500px) {
+    /* … */
+.logo-main {
+    display: none;
+}
+.menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.menu-item {
+    font-size: 16px;
+    color:#FFFF;
+    font-weight: 500;
+    background-color: rgb(2, 13, 27);
+    margin: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    border: 3px solid white;
+    
+}
 }
 
 /* MAIN */
@@ -99,7 +123,6 @@ footer {
     margin-left: 150px;
 }
 
-
 /* seccion de redes sociales */
 .seguinos{
     font-size: 20px;
@@ -136,6 +159,8 @@ footer {
     background-image: url(../icons/TypcnSocialYoutubeCircular.svg);
 }
 
+
+
 .pagina{
     padding: 20px;
     border-radius: 3px;
@@ -168,6 +193,19 @@ footer {
     margin-left: 10px;
     flex-grow: 2;
     flex-shrink: 1;
+}
+
+@media (max-width: 500px) {
+    .info{
+        display: none;
+    }
+    .seguinos{display: none;}
+
+    .img-fondo{display: none;}
+
+    .mapa{
+        display: none;
+    }
 }
 
 /* .tienda{}  */
