--- a/sass/style.css
+++ b/sass/style.css
@@ -327,6 +327,4 @@ footer {
   .entrada {
     margin-left: 10px;
   }
-}
-
-/*# sourceMappingURL=site.css.map */
+}/*# sourceMappingURL=style.css.map */
