--- a/css/site copy.css
+++ b/css/site copy.css
@@ -1,5 +1,3 @@
-$colorfondo:rgba(80, 79, 76, 0.168);
-
 html, body {
     height: 100%;
     width: 100%;
@@ -10,8 +8,6 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: stretch;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
@@ -20,33 +16,28 @@ a {
     text-decoration: none;
 }
 
-/* HEADER */
+/* HEDER */
 header {
     position: relative;
-    height: 80px;
-    display:flexbox;
-
+    height: 140px;
 }
 
 header > nav
 {
-    background-image: linear-gradient(to right, $colorfondo, rgb(1, 1, 1) ), url("../images/fondos/fondo_barra-fondobl.jpeg");
+    background-image: linear-gradient(to right, rgba(81, 79, 76, 0.168), rgb(1, 1, 1) ), url("../images/fondos/fondo_barra-fondobl.jpeg");
     background-size: 100%;
     background-position: center;
-    height: 80px;
+    height: 140px;
     
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-
 .menu {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    flex-grow: 1;
 }
 
 
@@ -100,7 +91,7 @@ header > nav
 /* MAIN */
 main {
     display: flex;
-    flex-grow:1;
+    flex:1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -116,7 +107,7 @@ footer {
     background-image: linear-gradient(to right, rgba(81, 79, 76, 0.168), rgb(1, 1, 1) ), url('../images/fondos/fondo_barra-fondoneg.jpeg');
 
     width: 100%;
-    height: 80px;
+    height: 120px;
     
     display: flex;
     flex-direction: row;
@@ -188,63 +179,6 @@ footer {
 /* paginas */
 /* .nosotros{ } */
 
-.formulario-web {
-    *{box-sizing:border-box;}
-
-    form{
-        width:300px;
-        padding:16px;
-        border-radius:10px;
-        margin:auto;
-        background-color:#ccc;
-    }
-    
-    form label{
-        width:72px;
-        font-weight:bold;
-        display:inline-block;
-    }
-    
-    form input[type="text"],
-    form input[type="email"]{
-        width:180px;
-        padding:3px 10px;
-        border:1px solid #f6f6f6;
-        border-radius:3px;
-        background-color:#f6f6f6;
-        margin:8px 0;
-        display:inline-block;
-    }
-    
-    form input[type="submit"]{
-        width:100%;
-        padding:8px 16px;
-        margin-top:32px;
-        border:1px solid #000;
-        border-radius:5px;
-        display:block;
-        color:#fff;
-        background-color:#000;
-    } 
-    
-    form input[type="submit"]:hover{
-        cursor:pointer;
-    }
-    
-    textarea{
-        width: 800px;
-        height: 50px;
-        border:1px solid #f6f6f6;
-        border-radius:3px;
-        background-color:#f6f6f6;			
-        margin:8px 0;
-        /*resize: vertical | horizontal | none | both*/
-        resize:none;
-        display:block;
-    }
-}
-
-
 .contacto {
     display: flex;
     flex-direction: row;
@@ -256,8 +190,8 @@ footer {
     flex-shrink: 2; 
 }
 .mapa{
-    margin-left: 8px;
-    flex-grow: 1;
+    margin-left: 10px;
+    flex-grow: 2;
     flex-shrink: 1;
 }
 
